fix better table color contrast

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -180,7 +180,7 @@ ul {
 }
 
 .better > thead > tr {
-    background-color: #445b2b;
+    background-color: #2b3c19;
     color: #ffffff;
 }
 
@@ -192,7 +192,7 @@ ul {
 }
 
 .category-one > th{
-    background-color: #768960;
+    background-color: #445b2b;
     color: #ffffff;
 }
 
